--- a/template/college/student_book_appointment.html
+++ b/template/college/student_book_appointment.html
@@ -68,6 +68,9 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
+              {% render_field appointmentForm.title class="form-control" placeholder="Event Details" %}
+            </div>
+            <div class="form-group">
               {% render_field appointmentForm.description class="form-control" placeholder="Event Details" %}
             </div>
             <div class="form-group">
